# notegate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.sample/notegate-workbench/: README.md  app.js  index.html  styles.css
backend/: Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/examples/: recalculate_usage.rs  seed_user.rs
backend/crates/api/src/: error.rs  file_preview.rs  main.rs  object_storage.rs  object_storage_cleanup_worker.rs  object_upload_flow.rs  openapi.rs  page.rs  periodic_worker.rs  purge_worker.rs  routes.rs  state.rs  usage_bootstrap.rs  usage_reconcile_worker.rs
backend/crates/api/src/auth/: api_key.rs  bearer_tests.rs  jwt.rs  metadata.rs  mod.rs  oauth.rs  oauth_exchange.rs  oauth_flow.rs  oidc.rs  origin.rs  session.rs
backend/crates/api/src/auth/bearer/: error.rs  extractor.rs  middleware.rs  mod.rs  verify.rs
backend/crates/api/src/identity/: adapter.rs  me.rs  mod.rs
backend/crates/api/src/mcp/: server.rs
backend/crates/api/src/mcp/tools/: common.rs  files.rs  files_find.rs  files_grep.rs  files_ls.rs  files_mkdir.rs  files_mv.rs  files_patch.rs  files_read.rs  files_restore.rs  files_rm.rs  files_stat.rs  files_touch.rs  files_write.rs  identity.rs  me.rs  mod.rs  resolve.rs  search.rs  spaces.rs  support.rs  transfers.rs  unified.rs  workspaces.rs  workspaces_create.rs  workspaces_get.rs  workspaces_list.rs
backend/crates/api/src/rest/: access.rs  agents.rs  connections.rs  documents.rs  dto.rs  file_upload_tests.rs  file_uploads.rs  files.rs  me.rs  mod.rs  nodes.rs  nodes_event_tests.rs  search.rs  spaces.rs  test_support.rs  text.rs  usage_tests.rs  vault.rs  workspaces.rs
backend/crates/api/src/rest/dto/: events.rs  nodes.rs
backend/crates/api/src/rest/files/: dto.rs  error.rs  handlers.rs  mod.rs
backend/crates/api/src/rest/nodes_event_tests/: mod.rs  support.rs
backend/crates/api/src/rest/vault/: dto.rs  error.rs  handlers.rs  mod.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: config.rs  error.rs  lib.rs  limits.rs  security.rs  tier.rs  validation.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_extensions.sql  0001_init.sql  0002_identity.sql  0003_files.sql  0003_spaces.sql  0003_vault.sql  0004_nodes_content.sql  0004_vault_workspace_unique_names.sql  0005_unicode_names.sql  0006_browser_sessions.sql  0007_expand_text_line_limit.sql  0008_recent_nodes_index.sql  0009_audit_events.sql  0010_file_change_events.sql  0011_nodes_name_sort_index.sql  0012_space_usage.sql  0013_split_space_usage_bytes.sql  0014_object_storage.sql  0015_object_only_files.sql  0016_default_user_tier.sql  0017_multipart_object_uploads.sql  0018_detected_file_media_type.sql  0019_file_change_sync.sql
backend/crates/db/src/: access.rs  access_repo.rs  account_delete.rs  account_repo.rs  agent_repo.rs  api_key_repo.rs  audit_event_repo.rs  audit_events.rs  browser_session_repo.rs  connection_repo.rs  event_history_query.rs  file_change_event_repo.rs  file_change_events.rs  files_repo.rs  key_epoch_repo.rs  lib.rs  object_storage_repo.rs  postgres_pool.rs  purge_repo.rs  space_permission.rs  space_usage.rs  space_usage_repo.rs  spaces_repo.rs  test_support.rs  tier_lookup.rs  usage_repo.rs  user_repo.rs  vault_repo.rs  workspace_repo.rs  workspace_role.rs  workspaces.rs  workspaces_repo.rs
backend/crates/db/src/files/: commands.rs  document.rs  error.rs  mod.rs  model.rs  node.rs  object_uploads.rs  queries.rs  rows.rs  search.rs  store.rs  tests.rs  validation.rs  workspace.rs
backend/crates/db/src/files/commands/: checks.rs  copy_node.rs  create.rs  delete.rs  mod.rs  move_node.rs  restore.rs  save.rs  update.rs  workspace.rs
backend/crates/db/src/files/queries/: document.rs  mod.rs  node.rs  search.rs
backend/crates/db/src/space_usage_repo/: maintenance.rs  reconciliation.rs
backend/crates/db/src/vault/: document.rs  error.rs  mod.rs  node.rs  search.rs  tests.rs  validation.rs  workspace.rs
backend/crates/db/tests/: account_repo.rs  agent_repo.rs  api_key_repo.rs  audit_event_repo.rs  audit_events.rs  browser_session_repo.rs  file_change_events.rs  files_commands.rs  files_lifecycle.rs  limits.rs  object_storage_objects.rs  permissions.rs  purge_repo.rs  readiness.rs  search.rs  space_usage.rs  space_usage_quota.rs  space_usage_reconciliation.rs  usage_repo.rs  workspace_repo.rs
backend/crates/db/tests/common/: mod.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: lib.rs  postgres_pool.rs
backend/crates/service/: Cargo.toml
backend/crates/service/src/: accounts.rs  agents.rs  api_keys.rs  audit_events.rs  connections.rs  cursor.rs  error.rs  keys.rs  lib.rs  pagination.rs  spaces.rs  usage.rs
backend/crates/service/src/access/: mod.rs
backend/crates/service/src/agents/: mod.rs
backend/crates/service/src/connections/: mod.rs
backend/crates/service/src/files/: content.rs  events.rs  format.rs  input.rs  mod.rs  mutate.rs  output.rs  patch.rs  policy.rs  preview.rs  read.rs  service.rs  store.rs  target.rs  tests.rs  types.rs  validation.rs  view.rs
backend/crates/service/src/files/service/: mod.rs  range.rs  read.rs  tests.rs
backend/crates/service/src/identity/: mod.rs
backend/crates/service/src/search/: find.rs  grep.rs  mod.rs  tree.rs
backend/crates/service/src/spaces/: mod.rs
backend/crates/service/src/workspaces/: mod.rs
backend/crates/service/tests/: files_lifecycle.rs  permissions.rs  search.rs
backend/crates/service/tests/common/: mod.rs
deploy/docker/: web.Dockerfile
deploy/minio/: init.sh
deploy/nginx/: notegate.conf
docs/: development.md
docs/adr/: 0001-ai-native-personal-file-space.md  0001-familiar-file-tree-ai-native-note-ux.md  0001-personal-ai-native-workspace-access.md  0002-user-agent-and-workspace-access-model.md  0002-user-managed-agents-and-space-connections.md  0003-code-structure-and-component-conventions.md  0004-account-deletion-and-re-registration-policy.md  (+3 more)
(+355 files in other folders)
