[package]
name = "notegate-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "notegate-api"
path = "src/main.rs"

[dependencies]
notegate-core.workspace = true
notegate-db.workspace = true
notegate-model.workspace = true
notegate-service.workspace = true

tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true

aliri.workspace = true
aliri_oauth2.workspace = true
aliri_clock.workspace = true
jsonwebtoken.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-http-client.workspace = true
hyper-legacy.workspace = true
base64.workspace = true
url.workspace = true
axum-extra.workspace = true
axum-governor.workspace = true
secrecy.workspace = true
subtle.workspace = true
rmcp.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
schemars.workspace = true
time.workspace = true
infer.workspace = true
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono", "uuid", "url"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
notegate-db = { workspace = true, features = ["test-util"] }
sqlx.workspace = true

[lints]
workspace = true
