[package]
name = "notegate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Exposes deterministic test/dev fixtures (e.g. `PiiCrypto::test`). Default-off so
# release/production builds cannot reach them; enabled only by test targets.
test-util = []

[dependencies]
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
aes-gcm.workspace = true
config.workspace = true
regex.workspace = true
serde.workspace = true
secrecy.workspace = true
thiserror.workspace = true
url.workspace = true
validator.workspace = true

[lints]
workspace = true
