[package]
name = "notegate-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
notegate-core.workspace = true
notegate-domain.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
