[package]
name = "notegate-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
notegate-core.workspace = true
notegate-model.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
sha2.workspace = true

[lints]
workspace = true
