[package]
name = "notegate-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
notegate-core.workspace = true
notegate-model.workspace = true
notegate-db.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true
similar.workspace = true

[dev-dependencies]
tokio.workspace = true
sqlx.workspace = true

[lints]
workspace = true
