[package]
name = "notegate-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Exposes the cursor default test signing key + test-only repo constructors via the
# db edge. Default-off; the integration tests enable it via the dev-dependency
# self-edge below.
test-util = ["notegate-db/test-util"]

[dependencies]
notegate-core.workspace = true
notegate-model.workspace = true
notegate-db.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true
similar.workspace = true

[dev-dependencies]
notegate-service = { path = ".", features = ["test-util"] }
tokio.workspace = true
sqlx.workspace = true

[lints]
workspace = true
